kubernetes/inventory-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-app
  namespace: inventory-deployment
spec:
  replicas: 1
  progressDeadlineSeconds: 300
  selector:
    matchLabels:
      app: inventory-app
  template:
    metadata:
      labels:
        app: inventory-app
    spec:
      containers:
        - name: inventory-app
          image: omisam/inventory-app:v01.5
          ports:
            - containerPort: 8090
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8090
              httpHeaders:
                - name: Host
                  value: "localhost"
            initialDelaySeconds: 180
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8090
              httpHeaders:
                - name: Host
                  value: "localhost"
            initialDelaySeconds: 180
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
#          startupProbe:
#            httpGet:
#              path: /actuator/health
#              port: 8090
#              httpHeaders:
#                - name: Host
#                  value: "localhost"
#            initialDelaySeconds: 120
#            periodSeconds: 10
#            timeoutSeconds: 10
#            failureThreshold: 10
