kubernetes/inventory-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-app
  namespace: inventory-deployment
spec:
  type: NodePort
  selector:
    app: inventory-app
  ports:
    - port: 8090
      targetPort: 8090  # Ensure this matches the container port
      nodePort: 30090   # Ensure this is within the valid range (30000-32767)
